Bug 53966. Remove unnecessary view creation from nsImageControlFrame, and remove unused fields and functions from nsImageControlFrame/nsHTMLButtonControlFrame. r+sr=bzbarsky